# dune-common

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  dune-uncrustify.cfg  dune.module  pyproject.toml  setup.py
.reuse/: dep5
cmake/modules/: AddGMPFlags.cmake  AddMPFRFlags.cmake  AddMPIFlags.cmake  CMakeLists.txt  DuneAddLibrary.cmake  DuneAddPybind11Module.cmake  DuneCommonMacros.cmake  DuneExecuteProcess.cmake  DuneMPI.cmake  DuneMacros.cmake  DuneModuleDependencies.cmake  DuneModuleInformation.cmake  DuneModuleLibrary.cmake  DunePolicy.cmake  DuneProject.cmake  DunePythonCommonMacros.cmake  DunePythonInstallPackage.cmake  DunePythonTestCommand.cmake  DuneSphinxCMakeDoc.cmake  DuneTestMacros.cmake  DuneUtilities.cmake  FindMETIS.cmake  FindMPFR.cmake  FindPTScotch.cmake  FindParMETIS.cmake
cmake/pkg/: dune-common-config.cmake.in
cmake/scripts/: extract_cmake_data.py
dune/common/: CMakeLists.txt  boundschecking.hh  densematrix.hh  densetensor.hh  densetensormixin.hh  densetensorspan.hh  densevector.hh  dotproduct.hh  dynmatrix.hh  dynvector.hh  fmatrix.hh  fvector.hh  gmpfield.hh  initializerlist.hh  integersequence.hh  math.hh  overloadset.hh  parameterizedobject.hh  rangeutilities.hh  tensor.hh  tensordot.hh  tensormixin.hh  tensormultidot.hh  tensorspan.hh  tensortraits.hh  typelist.hh  typetraits.hh
dune/common/concepts/: compare.hh  scalar.hh  tensor.hh
dune/common/concepts/archetypes/: CMakeLists.txt  tensor.hh
dune/common/parallel/test/: CMakeLists.txt
dune/common/std/: CMakeLists.txt  algorithm.hh  compare.hh  default_accessor.hh  extents.hh  forceinline.hh  layout_left.hh  layout_left_padded.hh  layout_right.hh  layout_right_padded.hh  layout_stride.hh  mdarray.hh  mdspan.hh  submdspan.hh  submdspan_slices.hh  type_traits.hh
dune/common/std/impl/: CMakeLists.txt  fwd_layouts.hh  indices.hh  submdspan.hh
dune/common/std/test/: CMakeLists.txt  extentstest.cc  mappingtest.cc  (+3 more)
dune/common/test/: CMakeLists.txt  dyntensortest.cc  dynvectortest.cc  fmatrixtest.cc  foreachindex.hh  ftensortest.cc  fvectortest.cc  gmpfieldtest.cc  integersequencetest.cc  rangeutilitiestest.cc  stdtypetraitstest.cc  tensordottest.cc  typelisttest.cc  typetraitstest.cc
dune/common/test/benchmark/: CMakeLists.txt  tensordotbenchmark.cc
dune/python/: CMakeLists.txt
dune/python/pybind11/: CMakeLists.txt
dune/python/pybind11/detail/: CMakeLists.txt
dune/python/pybind11/eigen/: CMakeLists.txt
dune/python/test/: CMakeLists.txt  packagemetadatatest.py
python/dune/: packagemetadata.py
python/dune/generator/: algorithm.py  builder.py  cmakebuilder.py  generator.py
(+2 files in other folders)
